# group_project_490_frontend

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: run_tests.yml
selenium/: .gitignore  README.md  conftest.py  pyproject.toml  pyrightconfig.json
selenium/pages/: __init__.py  base_page.py  client_dashboard_page.py  landing_page.py  login_page.py  onboarding_page.py  signup_page.py
selenium/tests/: __init__.py  test_client_dashboard.py  test_landing.py  test_login.py  test_onboarding.py  test_signup.py  test_smoke.py
src/: App.jsx  index.css  main.jsx
src/api/: admin.js  api.js  auth.js  chat.js  client.js  coach.js  notifications.js  survey.js  workouts.js
src/components/: button.jsx  card_dash.jsx  day_tabs.jsx  index.jsx  list_row.jsx  navbar.jsx  overlay.jsx  progress_ring.jsx  section_header.jsx  skeleton.jsx  stat_card.jsx  status_badge.jsx  theme.jsx
src/components/overlays/: accounts_detail.jsx  availability_detail.jsx  clients_detail.jsx  coach_detail.jsx  coach_profile.jsx  daily_survey.jsx  meal_detail.jsx  (+9 more)
src/pages/: admin_dash.jsx  chat.jsx  client_chat.jsx  client_dash.jsx  coach_chat.jsx  coach_dash.jsx  coach_public_profile.jsx  coach_request_form.jsx  find_coach.jsx  forgot_password.jsx  landing.jsx  login.jsx  onboarding.jsx  profile.jsx  signup.jsx  workouts.jsx
src/test/: api_chat.test.js  api_client.test.js  api_coach.test.js  api_workouts.test.js  components.test.jsx  routing.test.jsx  setup.js
src/utils/: coachRequests.js  profileDrafts.js  roleAccess.js  sessionAuth.js
(+2 files in other folders)
